Prevent dragging on mobile; fix retina scaling; improve responsive readability

--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,19 @@
-html {
-	position: relative;
-	min-height: 100%;
-}
-
 body {
 	background-color: #151E1D;
 	font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 	color: #474747;
-	margin: 0 0 200px;
+	overflow: hidden;
+	margin: 0;
 }
 
+
 .container {
-	margin: 40px;
+	margin: 20px 40px;
 	display: inline-block;
-	overflow: hidden;
 }
 
 .header h1 {
-	font-size: 30px;
+	font-size: 20px;
 	font-weight: 500;
 	line-height: 160%;
 }
@@ -36,30 +32,32 @@ li {
 }
 
 .work {
-	font-size: 19px;
-	margin: 30px 0;
+	font-size: 16px;
+	margin: 50px 0 0 0;
 }
 
 .footer {
-	font-size: 16px;
 	position: absolute;
+	font-size: 14px;
 	bottom: 0;
-	height: 200px;
-	width: 100%;
-	overflow:hidden;
+}
+
+.footer ul {
+	list-style: none;
+}
+
+.footer li {
+	display: inline-block;
+	margin-right: 10px;
 }
 
 .footer a {
 	text-decoration: none;
 }
 
-@media only screen and (max-width: 667px) {	
-	.container {
-		margin-top: 20px;
-	}
-
+@media (min-width: 750px) {
 	.header h1 {
-		font-size: 22px;
+		font-size: 24px;
 	}
 
 	.work {
@@ -69,22 +67,19 @@ li {
 	.footer {
 		font-size: 16px;
 	}
+
 }
 
-/* fix footer clipping and footer height on tiny screens */
-@media only screen and (max-height: 580px) {
+@media (min-width: 1200px) {
+	.header h1 {
+		font-size: 2vw;
+	}
 
-	body {
-		margin: 0 0 70px;
+	.work {
+		font-size: 1.3vw;
 	}
 
 	.footer {
-		font-size: 14px;
-		height: 70px;
-	}
-
-	.footer ul li {
-		display: inline;
-		margin-right: 10px;
+		font-size: 1vw;
 	}
 }
